<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="20sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:fontFamily="monospace"
            android:textColor="@color/colorLight"
            android:textAllCaps="true"
            android:layout_marginBottom="50sp"
            android:text="@string/sign_in"/>

        <EditText
            android:id="@+id/email_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:background="@color/colorLight"
            android:textSize="25sp"
            android:inputType="textEmailAddress"
            android:padding="10sp"
            android:layout_marginBottom="20sp"
            android:autofillHints="true" />

        <EditText
            android:id="@+id/password_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:background="@color/colorLight"
            android:textSize="25sp"
            android:inputType="textPassword"
            android:padding="10sp"
            android:layout_marginBottom="20sp"
            android:autofillHints="true" />

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/colorPrimaryDark"
            android:background="@color/colorAccent"
            android:layout_marginTop="20sp"
            android:textSize="25sp"
            android:padding="10sp" />

        <TextView
            android:id="@+id/no_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_account"
            android:textColor="@color/colorLight"
            android:textSize="20sp"
            android:layout_marginTop="15sp"
            android:textAlignment="center" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>